chore(gux-basic-tabs): fixed some styling bugs, including icon alignment

--- a/src/components/beta/gux-basic-tabs/gux-basic-tab/gux-basic-tab.less
+++ b/src/components/beta/gux-basic-tabs/gux-basic-tab/gux-basic-tab.less
@@ -4,11 +4,14 @@
 
 gux-basic-tabs-beta[orientation='vertical'] {
   .gux-basic-tab {
+    padding-right: 2px;
     &.gux-active {
+      padding-right: 0;
       border-right: 2px solid @gux-blue-60;
     }
 
     &:hover:not(.gux-active):not(.gux-disabled) {
+      padding-right: 0;
       border-right: 2px solid @gux-grey-10;
     }
   }
@@ -17,11 +20,14 @@ gux-basic-tabs-beta[orientation='vertical'] {
 gux-basic-tabs-beta:not([orientation='vertical']) {
   .gux-basic-tab {
     box-sizing: border-box;
+    padding-bottom: 2px;
     &.gux-active {
+      padding-bottom: 0;
       border-bottom: 2px solid @gux-blue-60;
     }
 
     &:hover:not(.gux-active):not(.gux-disabled) {
+      padding-bottom: 0;
       border-bottom: 2px solid @gux-grey-10;
     }
   }
@@ -53,7 +59,6 @@ gux-basic-tab {
 
   .gux-disabled {
     gux-tooltip-title {
-      cursor: not-allowed;
       opacity: 50%;
     }
   }
@@ -79,12 +84,10 @@ gux-basic-tab {
     border: none;
 
     &:focus-visible {
+      padding: 0 13px 3px 13px;
       border: 3px solid @gux-blue-90;
       border-radius: 5px;
       outline: none;
-    }
-    [slot='icon'] {
-      padding: 0 3px;
     }
   }
 }
